# vonvon

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  electron-builder.yml  electron.vite.config.ts  package-lock.json  package.json  tsconfig.node.json  tsconfig.web.json
.claude/: settings.json
.omc/plans/: autopilot-impl.md  vonvon-agent-v1.1.md  vonvon-agent.md  vonvon-mvp.md
.omc/sessions/: c0aedf37-4193-4313-85dc-85e31ab6c2e0.json  f82821a5-fed4-4053-90fd-9ea192080d3f.json
.omc/specs/: deep-interview-file-drag.md  deep-interview-vonvon-agent.md  deep-interview-vonvon.md
.omc/state/: agent-replay-a4d5b557-2ebf-474a-b027-a3a7d034882f.jsonl  deep-interview-state.json  hud-state.json  hud-stdin-cache.json  last-tool-error.json  mission-state.json  ralplan-state.json  (+1 more)
backend/: README.md  pyproject.toml
backend/.omc/state/: agent-replay-63c82474-e2cf-4bff-bbbd-46ac86c61a87.jsonl  last-tool-error.json
backend/.omc/state/sessions/63c82474-e2cf-4bff-bbbd-46ac86c61a87/: ralplan-state.json
backend/app/: config.py  main.py  schemas.py
backend/app/routes/: auth.py  chat.py  integrations.py  mcp.py  models.py  sessions.py  skills.py  workspace.py
backend/app/services/: agent_service.py  auth_service.py  feishu_integration_service.py  mcp_service.py  session_service.py  skills_service.py  workspace_service.py
backend/hermes-agent/: HERMES-FORK-NOTES.md  hermes_state.py  model_tools.py  run_agent.py  toolsets.py
backend/hermes-agent/agent/: codex_device_flow.py  prompt_builder.py
backend/hermes-agent/hermes_cli/: auth.py  auth_commands.py  config.py  config_lock.py  default_soul.py  mcp_config.py  skills_config.py
backend/hermes-agent/skills/software-development/install-skills/: SKILL.md
backend/hermes-agent/skills/software-development/install-skills/references/: provenance-template.md  source-compatibility.md
backend/hermes-agent/tests/: test_hermes_state.py
backend/hermes-agent/tests/agent/: test_prompt_builder.py
backend/hermes-agent/tests/hermes_cli/: test_config.py
backend/hermes-agent/tests/run_agent/: test_run_agent.py
backend/hermes-agent/tests/tools/: test_mcp_tool_issue_948.py  test_skill_import_tool.py
backend/hermes-agent/tools/: mcp_tool.py  skill_import_tool.py  skills_hub.py
backend/hermes-agent/website/docs/developer-guide/: prompt-assembly.md
backend/hermes-agent/website/docs/user-guide/features/: personality.md
backend/tests/: conftest.py  test_agent_service.py  test_api_auth.py  test_api_integrations.py  test_api_mcp.py  test_api_models_persist.py  test_api_skills.py  test_api_workspace.py  test_auth_service.py  test_chat.py  test_concurrent_mcp_probe.py  test_config_atomic.py  test_config_lock_cli_vs_ui.py  test_event_loop_latency.py  test_feishu_integration_service.py  test_hermes_home_permissions.py  test_install_bundle_silent.py  test_log_safety.py  test_mcp_service.py  test_oauth_token_exchange_retry.py  test_sessions.py  test_skill_prompt_cache.py  test_skills_service.py  test_switch_model_empty_guard.py  test_vonvon_hermes_home.py  test_workspace_apply_tx.py  test_workspace_service.py
docs/: composer-placeholder-showcase.html  composer-rotating-tips-showcase.html  feishu-deep-integration-plan.md  kirby-asset-pack-spec.md  pink-chat-preview-shell-variants.html  pink-chat-preview-variants.html  pink-chat-preview.html  token-color-directions.html  user-bubble-shape-options.html  user-message-balance-options.html  v1.1-qa-checklist.md  vonvon-chat-borderless-variants.html  vonvon-chat-pink-accent-mix-variants.html  vonvon-chat-pink-outgoing-contrast.html  vonvon-chat-pink-readable-variants.html  vonvon-chat-pink-system-variants.html  vonvon-forms-prototype.html  vonvon-kirby-handoff.md
native/: CMakeLists.txt  index.d.ts
native/.omc/state/: last-tool-error.json
native/src/: addon.mm  animator.h  animator.mm  drag_handler.h  drag_handler.mm  kirby_window.h  kirby_window.mm  snap_engine.h  snap_engine.mm
public/: kirby-asset-pack-spec.md  kirby-pack-preview.html
scripts/: build-runtime.sh  test-packaged.sh  validate-kirby-pack.mjs
(+63 files in other folders)
