[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vonvon-backend"
version = "0.1.0"
description = "vonvon Python backend service (FastAPI + hermes-agent)"
readme = "README.md"
license = { text = "AGPL-3.0-only" }
requires-python = ">=3.11"
authors = [
    { name = "ModelZen contributors" },
]
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "sse-starlette>=1.8.2",
    "pydantic>=2.6.0",
    "pyyaml>=6.0",
    # hermes-agent is vendored as a git subtree at backend/hermes-agent/
    # and installed via the uv workspace declaration below.
    "hermes-agent[mcp]",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[tool.uv.sources]
hermes-agent = { workspace = true }

[tool.uv.workspace]
members = ["hermes-agent"]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[project.urls]
Homepage = "https://github.com/modelzen/vonvon"
Repository = "https://github.com/modelzen/vonvon.git"
Issues = "https://github.com/modelzen/vonvon/issues"
